--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -130,4 +130,10 @@
     "cSpell.enableFiletypes": [
         "!jsonc"
     ],
+    "[python]": {
+        "editor.defaultFormatter": "ms-python.autopep8"
+    },
+    "python.formatting.provider": "none",
+    "python.linting.flake8Enabled": true,
+    "python.linting.enabled": true,
 }
